--- a/sass/components/_fields.scss
+++ b/sass/components/_fields.scss
@@ -62,6 +62,21 @@
   a {
     text-decoration:none;
     color:$general;
-    // font-weight:600;
+    
   }
+}
+
+
+
+
+.field--name-body {
+  
+  a {
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
+    
+  }
+  
 }
